Adds method for resizing images.
WIP on implementing the method using a staging directory for as
temporary home for the images. Staging dir specified in App.config.

--- a/teqChecker/teqChecker/App.config
+++ b/teqChecker/teqChecker/App.config
@@ -3,5 +3,6 @@
     <appSettings>
         <add key="DirectoryToMonitor" value="C:\Dropbox\Camera Uploads"/>
         <add key="CopyToDirectory" value="C:\src\teqBlog\teqBlog\images"/>
+        <add key ="StagingDirectory" value="C:\img_staging"/>
     </appSettings>
 </configuration>
