Starts separate project for data model. Last commit before starting new branch to experiment with doing away with the code-first approach.

--- a/teqChecker/teqChecker/App.config
+++ b/teqChecker/teqChecker/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-        <add key="DirectoryToMonitor" value="C:\Dropbox\Camera Uploads"/>
+        <add key="DirectoryToMonitor" value="C:\Dropbox\teqBlogFiles\Photos"/>
         <add key="CopyToDirectory" value="C:\src\teqBlog\teqBlog\images"/>
+        <add key="AutoPostSourceDirectory" value="C:\Dropbox\teqBlogFiles\Photos"/>
     </appSettings>
 </configuration>
