Creates entity model for SQL database instead of CE. WIP on getting mvc project to compile.

--- a/teqBlog/teqBlog.csproj
+++ b/teqBlog/teqBlog.csproj
@@ -68,20 +68,16 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="teqBlogModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\teqBlogModel\teqBlogModel\bin\Debug\teqBlogModel.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201207080330577_InitialCreate.cs" />
-    <Compile Include="Migrations\201207080330577_InitialCreate.Designer.cs">
-      <DependentUpon>201207080330577_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\BlogPost.cs" />
-    <Compile Include="Models\Photo.cs" />
-    <Compile Include="Models\teqBlogEntities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
