--- a/teqBlog/Web.config
+++ b/teqBlog/Web.config
@@ -8,12 +8,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </configSections>
-    <connectionStrings>
+    <!--<connectionStrings>
         <add name="teqBlogEntities"
              connectionString="Data Source=|DataDirectory|teqBlog.sdf"
              providerName="System.Data.SqlServerCe.4.0"/>
         
-    </connectionStrings>
+    </connectionStrings>-->
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
