teqBlog project now referencing teqBlogModel project.
Removes integrated C# classes and adds connection string for SQL
database, rather than a code first approach.

--- a/teqChecker/teqChecker/App.config
+++ b/teqChecker/teqChecker/App.config
@@ -2,7 +2,8 @@
 <configuration>
     <appSettings>
         <add key="DirectoryToMonitor" value="C:\Dropbox\teqBlogFiles\Photos"/>
-        <add key="CopyToDirectory" value="C:\src\teqBlog\teqBlog\images"/>
+        <!--<add key="CopyToDirectory" value="C:\src\teqBlog\teqBlog\images"/>-->
+        <add key="CopyToDirectory" value="\\TQ1\Web\teqk\teqknowledgy.com\wwwroot\images\stories\dropboxed"/>
         <add key="AutoPostSourceDirectory" value="C:\Dropbox\teqBlogFiles\Photos"/>
     </appSettings>
 </configuration>
