Fixes bugs in connecting to EF model on separate project.
Can now add and view blog posts.

Next Step is to modify teqChecker to automatically post image to blog as
soon as it resized and dropped in folder.

--- a/teqBlog/teqBlog.csproj
+++ b/teqBlog/teqBlog.csproj
@@ -86,7 +86,9 @@
     <Content Include="Styles\main.css" />
     <Content Include="Views\Home\Create.aspx" />
     <Content Include="Views\Home\Index.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
