--- a/teqBlogModel/teqBlogModel/teqBlogModel.csproj
+++ b/teqBlogModel/teqBlogModel/teqBlogModel.csproj
@@ -63,6 +63,7 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
