--- a/teqChecker/teqChecker/App.config
+++ b/teqChecker/teqChecker/App.config
@@ -1,9 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <appSettings>
-        <add key="DirectoryToMonitor" value="C:\Dropbox\teqBlogFiles\Photos"/>
-        <!--<add key="CopyToDirectory" value="C:\src\teqBlog\teqBlog\images"/>-->
-        <add key="CopyToDirectory" value="\\TQ1\Web\teqk\teqknowledgy.com\wwwroot\images\stories\dropboxed"/>
-        <add key="AutoPostSourceDirectory" value="C:\Dropbox\teqBlogFiles\Photos"/>
-    </appSettings>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  </configSections>
+  <appSettings>
+    <add key="DirectoryToMonitor" value="C:\Dropbox\teqBlogFiles\Photos" />
+    <add key="CopyToDirectory" value="C:\src\teqBlog\teqBlog\Views\Home\images" />
+    <!--<add key="CopyToDirectory" value="\\TQ1\Web\teqk\teqknowledgy.com\wwwroot\images\stories\dropboxed"/>-->
+    <add key="AutoPostSourceDirectory" value="C:\Dropbox\teqBlogFiles\Photos" />
+    <add key="AutoPostWebDirectory" value="images" />
+  </appSettings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="Data Source=.\SQLEXPRESS; Integrated Security=True; MultipleActiveResultSets=True" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
 </configuration>
